--- a/legacy/v0.ipynb
+++ b/legacy/v0.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Session PID : 7416\n"
+     ]
+    }
+   ],
    "source": [
     "print('Session PID :', os.getpid())\n",
     "\n",
     "start_time = datetime.datetime.now()\n",
-    "path = \"Y:\\Qibinfo\\Emails.pst\"  # PST file path\n",
+    "path = \"/home/belalm/email_analysis/data/raw/gmail_pst.pst\"  # PST file path\n",
     "opst = pypff.open(path)\n",
     "root = opst.get_root_folder()"
    ]
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,24 +65,40 @@
     "    number_of_sub_items = obj.get_number_of_sub_items() \n",
     "    number_of_sub_messages = obj.get_number_of_sub_messages()\n",
     "    number_of_record_sets = obj.get_number_of_record_sets()\n",
+    "    entries = [obj.get_entry(i) for i in range(number_of_entries)]\n",
     "    folders = [obj.get_sub_folder(i) for i in range(number_of_sub_folders)]\n",
-    "    data = {i.get_name(): i for i in folders}\n",
+    "    data = {i.get_name(): i for i in folders} \n",
     "    final_dict = {\n",
     "        'number_of_sub_folders': number_of_sub_folders,\n",
     "        'number_of_entries': number_of_entries,\n",
     "        'number_of_sub_items': number_of_sub_items,\n",
     "        'number_of_sub_messages': number_of_sub_messages,\n",
     "        'number_of_record_sets': number_of_record_sets,\n",
-    "        'data': data\n",
+    "        'data': data,\n",
+    "        'entries': entries\n",
     "    }\n",
     "    return final_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'pypff.folder' object has no attribute 'get_entry'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m root_data \u001b[38;5;241m=\u001b[39m \u001b[43mget_data_from_object\u001b[49m\u001b[43m(\u001b[49m\u001b[43mroot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m root_data\n",
+      "Cell \u001b[0;32mIn[16], line 7\u001b[0m, in \u001b[0;36mget_data_from_object\u001b[0;34m(obj)\u001b[0m\n\u001b[1;32m      5\u001b[0m number_of_sub_messages \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39mget_number_of_sub_messages()\n\u001b[1;32m      6\u001b[0m number_of_record_sets \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39mget_number_of_record_sets()\n\u001b[0;32m----> 7\u001b[0m entries \u001b[38;5;241m=\u001b[39m \u001b[43m[\u001b[49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_entry\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mnumber_of_entries\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      8\u001b[0m folders \u001b[38;5;241m=\u001b[39m [obj\u001b[38;5;241m.\u001b[39mget_sub_folder(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(number_of_sub_folders)]\n\u001b[1;32m      9\u001b[0m data \u001b[38;5;241m=\u001b[39m {i\u001b[38;5;241m.\u001b[39mget_name(): i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m folders} \n",
+      "Cell \u001b[0;32mIn[16], line 7\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      5\u001b[0m number_of_sub_messages \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39mget_number_of_sub_messages()\n\u001b[1;32m      6\u001b[0m number_of_record_sets \u001b[38;5;241m=\u001b[39m obj\u001b[38;5;241m.\u001b[39mget_number_of_record_sets()\n\u001b[0;32m----> 7\u001b[0m entries \u001b[38;5;241m=\u001b[39m [\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_entry\u001b[49m(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(number_of_entries)]\n\u001b[1;32m      8\u001b[0m folders \u001b[38;5;241m=\u001b[39m [obj\u001b[38;5;241m.\u001b[39mget_sub_folder(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(number_of_sub_folders)]\n\u001b[1;32m      9\u001b[0m data \u001b[38;5;241m=\u001b[39m {i\u001b[38;5;241m.\u001b[39mget_name(): i \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m folders} \n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'pypff.folder' object has no attribute 'get_entry'"
+     ]
+    }
+   ],
    "source": [
     "root_data = get_data_from_object(root)\n",
     "root_data"
@@ -82,9 +106,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'number_of_sub_folders': 8,\n",
+       " 'number_of_entries': 4,\n",
+       " 'number_of_sub_items': 8,\n",
+       " 'number_of_sub_messages': 0,\n",
+       " 'number_of_record_sets': 1,\n",
+       " 'data': {'Deleted Items': <pypff.folder at 0x7f75375d8060>,\n",
+       "  'Inbox': <pypff.folder at 0x7f7509f5bf90>,\n",
+       "  'Outbox': <pypff.folder at 0x7f7509f5b3f0>,\n",
+       "  'Sync Issues (This computer only)': <pypff.folder at 0x7f754c133720>,\n",
+       "  '[Gmail]': <pypff.folder at 0x7f7509e10300>,\n",
+       "  'Banking': <pypff.folder at 0x7f7509e11e60>,\n",
+       "  'Notes': <pypff.folder at 0x7f7509e106c0>,\n",
+       "  'Receipt': <pypff.folder at 0x7f7509e13540>}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Outlook = root_data['data']['Top of Outlook data file']\n",
     "Outlook_Data = get_data_from_object(Outlook)\n",
@@ -93,9 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'number_of_sub_folders': 0,\n",
+       " 'number_of_entries': 20,\n",
+       " 'number_of_sub_items': 5039,\n",
+       " 'number_of_sub_messages': 5039,\n",
+       " 'number_of_record_sets': 1,\n",
+       " 'data': {}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Inbox = Outlook_Data['data']['Inbox']\n",
     "Inbox_Data = get_data_from_object(Inbox)\n",
@@ -703,8 +766,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "email_analysis",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
