Added specialized Message Parser, Extractor, Enricher, and Utils methods. More refactoring.

--- a/email_etl.ipynb
+++ b/email_etl.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +30,10 @@
     "\n",
     "# Local Imports\n",
     "from src.utils.config import Config\n",
-    "from src.extract.pst_extractor import PstMessageExtractor, PrimaryEmailFeatures, ProcessedBatch\n",
-    "from src.transform.primary_features import PrimaryFeaturesExtractor\n",
-    "#from src.transform.derived_features import DerivedFeaturesExtractor\n",
-    "#from src.load.data_loader import DataLoader\n",
+    "from src.extract.pst_message_extractor import PstMessageExtractor, PstMessage\n",
+    "from src.extract.message_parser import MessageParser, ParsedMessage\n",
+    "# from src.transform.message_enricher import MessageEnricher, EnrichedMessage\n",
+    "#from src.load.data_loader import DataLoader, DataLoadResult, DataLoadError\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)"
    ]
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "config: Config = Config.from_json(\"config.json\")\n",
     "extractor: PstMessageExtractor = PstMessageExtractor(config.input_pst_path, config.chunk_size)\n",
-    "primary_extractor: PrimaryFeaturesExtractor = PrimaryFeaturesExtractor()\n",
+    "message_parser: MessageParser = MessageParser()\n",
     "#derived_extractor: DerivedFeaturesExtractor = DerivedFeaturesExtractor()\n",
     "#loader: DataLoader = DataLoader(config.output_directory)"
    ]
@@ -62,51 +62,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract"
+    "### ETL Pipeline with Error Handling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:Skipping empty folder: Deleted Items\n",
-      "INFO:root:Extracting messages from folder: Inbox\n",
-      "ERROR:root:Error getting value for key subject: pypff_message_get_conversation_topic: unable to retrieve conversation topic size. libuna_unicode_character_copy_from_utf16_stream: unsupported UTF-16 character. libuna_utf8_string_size_from_utf16_stream: unable to copy Unicode character from UTF-16 stream. libpff_mapi_value_get_data_as_utf8_string_size: unable to determine size of value data as UTF-8 string. libpff_record_entry_get_data_as_utf8_string_size_with_codepage: unable to determine size of value data as UTF-8 string. libpff_internal_item_get_entry_value_utf8_string_size: unable to retrieve UTF-8 string size. libpff_message_get_entry_value_utf8_string_size: unable to retrieve UTF-8 string size.\n",
-      "INFO:root:Skipping empty folder: Outbox\n",
-      "INFO:root:Skipping empty folder: Sync Issues (This computer only)\n",
-      "INFO:root:Skipping empty folder: [Gmail]\n",
-      "INFO:root:Skipping empty folder: Banking\n",
-      "INFO:root:Skipping empty folder: Notes\n",
-      "INFO:root:Skipping empty folder: Receipt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for chunk in extractor.extract_messages():\n",
-    "        processed_messages: List[PrimaryEmailFeatures] = []\n",
+    "for message_batch in extractor.extract_messages():\n",
+    "        #enriched_messages: List[EnrichedMessage] = []\n",
+    "        #failed_messages: List[Union[PstExtractError, ParseError, EnrichError, \n",
     "        \n",
-    "        for message in chunk.messages:\n",
-    "            primary_features: PrimaryEmailFeatures = primary_extractor.extract(message, chunk.folder_path)\n",
-    "            #derived_features: Dict[str, Any] = derived_extractor.extract(primary_features.dict())\n",
+    "        for pst_message in message_batch.messages:\n",
+    "            parsed_message: ParsedMessage = message_parser.extract(pst_message.message, pst_message.folder_name)\n",
+    "            #enriched_message: EnrichedMessage = MessageEnricher.enrich(parsed_message)\n",
     "            \n",
-    "            email_message = PrimaryEmailFeatures(\n",
-    "                **primary_features.model_dump(),\n",
-    "                #**derived_features\n",
-    "            )\n",
-    "            \n",
-    "            processed_messages.append(email_message)\n",
+    "            #enriched_messages.append(enriched_message)\n",
     "        \n",
-    "        processed_batch: ProcessedBatch = ProcessedBatch(\n",
-    "            batch_id=f\"batch_{datetime.now().isoformat()}\",\n",
-    "            processed_at=datetime.now(),\n",
-    "            messages=processed_messages\n",
-    "        )\n",
-    "        #loader.load(processed_batch)"
+    "        #loader.load(enriched_messages)"
    ]
   }
  ],
