Added message enrichment

--- a/email_etl.ipynb
+++ b/email_etl.ipynb
@@ -32,7 +32,7 @@
     "from src.utils.config import Config\n",
     "from src.extract.pst_message_extractor import PstMessageExtractor, PstMessage\n",
     "from src.extract.message_parser import MessageParser, ParsedMessage\n",
-    "# from src.transform.message_enricher import MessageEnricher, EnrichedMessage\n",
+    "from src.transform.message_enricher import MessageEnricher, EnrichedMessage\n",
     "#from src.load.data_loader import DataLoader, DataLoadResult, DataLoadError\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)"
@@ -10250,7 +10250,7 @@
     "        \n",
     "        for pst_message in message_batch.messages:\n",
     "            parsed_message: ParsedMessage = message_parser.extract(pst_message.message, pst_message.folder_name)\n",
-    "            #enriched_message: EnrichedMessage = MessageEnricher.enrich(parsed_message)\n",
+    "            enriched_message: EnrichedMessage = MessageEnricher.enrich(parsed_message)\n",
     "            \n",
     "            #enriched_messages.append(enriched_message)\n",
     "        \n",
