Updated database, model systems

--- a/email_etl.ipynb
+++ b/email_etl.ipynb
@@ -33,12 +33,12 @@
     "\n",
     "# Local Imports\n",
     "from src.config.config import Config\n",
-    "from src.extract.pst_message_extractor import PstMessageExtractor\n",
+    "from src.extract.message_extractor import PstMessageExtractor\n",
     "from src.transform.message_parser import MessageParser, ParsedMessage\n",
     "from src.transform.message_enricher import MessageEnricher, EnrichedMessage\n",
     "from src.load.data_loader import DataLoader\n",
     "from src.database.database import Database\n",
-    "from src.utils.data_exporter import DataExporter\n",
+    "from src.database.export_utils import DataExporter\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "logging.getLogger('chardet.charsetprober').disabled = True"
@@ -55,7 +55,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<class 'src.database.models.Address'>, <class 'src.database.models.Folder'>, <class 'src.database.models.Message'>, <class 'src.database.models.Recipient'>, <class 'src.database.models.References'>]\n",
+      "[<class 'src.database.models.Message'>, <class 'src.database.models.Address'>, <class 'src.database.models.Folder'>, <class 'src.database.models.Recipient'>, <class 'src.database.models.References'>]\n"
+     ]
+    }
+   ],
    "source": [
     "config = Config.from_json(\"config.json\")\n",
     "extractor = PstMessageExtractor(config.input_pst_path, config.chunk_size)\n",
@@ -81,12 +90,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27d57f5624d94f3cad4d5ff3c9cb38c5",
+       "model_id": "a984aec7994e4710bec0e1ed7d16a55e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Extracting messages:   0%|          | 0/21 [00:00<?, ?it/s]"
+       "Extracting messages:   0%|          | 0/5039 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -100,50 +109,32 @@
       "INFO:root:All tables have been created in the database.\n",
       "INFO:root:Starting ETL Pipeline\n",
       "INFO:langid.langid:initializing identifier\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "ERROR:root:Error getting value for key conversation_topic: pypff_message_get_conversation_topic: unable to retrieve conversation topic size. libuna_unicode_character_copy_from_utf16_stream: unsupported UTF-16 character. libuna_utf8_string_size_from_utf16_stream: unable to copy Unicode character from UTF-16 stream. libpff_mapi_value_get_data_as_utf8_string_size: unable to determine size of value data as UTF-8 string. libpff_record_entry_get_data_as_utf8_string_size_with_codepage: unable to determine size of value data as UTF-8 string. libpff_internal_item_get_entry_value_utf8_string_size: unable to retrieve UTF-8 string size. libpff_message_get_entry_value_utf8_string_size: unable to retrieve UTF-8 string size.\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 250 messages into the database\n",
-      "INFO:root:Successfully loaded 39 messages into the database\n",
-      "INFO:root:Finished ETL Pipeline in 1 minutes and 16 seconds\n"
+      "ERROR:root:Failed to get message value: pypff_message_get_conversation_topic: unable to retrieve conversation topic size. libuna_unicode_character_copy_from_utf16_stream: unsupported UTF-16 character. libuna_utf8_string_size_from_utf16_stream: unable to copy Unicode character from UTF-16 stream. libpff_mapi_value_get_data_as_utf8_string_size: unable to determine size of value data as UTF-8 string. libpff_record_entry_get_data_as_utf8_string_size_with_codepage: unable to determine size of value data as UTF-8 string. libpff_internal_item_get_entry_value_utf8_string_size: unable to retrieve UTF-8 string size. libpff_message_get_entry_value_utf8_string_size: unable to retrieve UTF-8 string size.\n",
+      "INFO:root:Finished ETL Pipeline in 1 minutes and 14 seconds\n"
      ]
     }
    ],
    "source": [
-    "total_batches = extractor.get_total_batches(\"Inbox\")\n",
-    "pbar = tqdm(total=total_batches, desc='Extracting messages')\n",
+    "total_messages = extractor.get_total_messages(\"Inbox\")\n",
+    "pbar = tqdm(total=total_messages, desc='Extracting messages')\n",
     "start_time = time.time()\n",
     "\n",
     "database.drop_all_tables()\n",
     "loader.create_tables()\n",
     "logging.info(\"Starting ETL Pipeline\")\n",
     "for message_batch in extractor.extract_messages(\"Inbox\"):\n",
+    "    total_messages_in_batch = len(message_batch.messages)\n",
+    "    parsed_messages: List[ParsedMessage] = []\n",
     "    enriched_messages: List[EnrichedMessage] = []\n",
+    "    loaded_messages: int = 0\n",
     "    \n",
     "    for pst_message in message_batch.messages:\n",
-    "        provider_email_id = pst_message.provider_email_id\n",
-    "        # logging.debug(f\"Processing message {provider_email_id}\")\n",
     "        try:\n",
-    "            parsed_message: ParsedMessage = message_parser.parse(pst_message.message, provider_email_id, pst_message.folder_name)\n",
+    "            parsed_message: ParsedMessage = message_parser.parse(pst_message.message, pst_message.folder_name)\n",
     "        except Exception as e:\n",
     "            continue\n",
+    "        else:\n",
+    "            parsed_messages.append(parsed_message)\n",
     "\n",
     "        try:\n",
     "            enriched_message: EnrichedMessage = message_enricher.enrich_message(parsed_message)\n",
@@ -152,15 +143,15 @@
     "        else:\n",
     "            enriched_messages.append(enriched_message)\n",
     "\n",
-    "    try:\n",
-    "        loader.load(enriched_messages)\n",
-    "    except SQLAlchemyError as e:\n",
-    "        logging.error(f\"Error loading messages in batch {message_batch.batch_id}: {e}\")\n",
-    "        continue\n",
-    "    else:\n",
-    "        logging.debug(f\"Loaded {len(enriched_messages)} messages in batch {message_batch.batch_id}\")\n",
+    "        try:\n",
+    "            loader.load(enriched_message)\n",
+    "        except SQLAlchemyError as e:\n",
+    "            logging.error(f\"Error loading message {enriched_message.provider_email_id}: {e}\")\n",
+    "            continue\n",
+    "        finally:\n",
+    "            loaded_messages += 1\n",
+    "            pbar.update(1)\n",
     "\n",
-    "    pbar.update(1)\n",
     "end_time = time.time()\n",
     "pbar.close()\n",
     "logging.info(f\"Finished ETL Pipeline in {int(end_time - start_time) // 60} minutes and {int(end_time - start_time) % 60} seconds\")"
@@ -181,6 +172,23 @@
    ],
    "source": [
     "exporter.export_to_excel(\"./data/processed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Exported database schema to ./data/schema.sql\n"
+     ]
+    }
+   ],
+   "source": [
+    "exporter.export_schema('./data')"
    ]
   }
  ],
