Hid private data.

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -106,8 +106,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMAIL_ACCOUNT = 'belal.mnur@gmail.com'\n",
-    "PASSWORD = 'iwpsphuxzslreuqn'\n",
+    "EMAIL_ACCOUNT = 'xxxxxxxxxxxxxxxxx'\n",
+    "PASSWORD = 'xxxxxxxxxxxxx'\n",
     "SERVER = 'imap.gmail.com'\n",
     "imap_extractor = IMAPExtractor(EMAIL_ACCOUNT, PASSWORD, SERVER)"
    ]
