Cleaned up unused imports

--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:sentence_transformers.SentenceTransformer:Use pytorch device_name: cpu\n",
-      "INFO:sentence_transformers.SentenceTransformer:Load pretrained SentenceTransformer: all-MiniLM-L6-v2\n",
-      "/home/belalm-linux/miniconda3/envs/qib/lib/python3.11/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "\n",
@@ -106,8 +95,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EMAIL_ACCOUNT = 'xxxxxxxxxxxxxxxxx'\n",
-    "PASSWORD = 'xxxxxxxxxxxxx'\n",
+    "EMAIL_ACCOUNT = ''\n",
+    "PASSWORD = ''\n",
     "SERVER = 'imap.gmail.com'\n",
     "imap_extractor = IMAPExtractor(EMAIL_ACCOUNT, PASSWORD, SERVER)"
    ]
@@ -171,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer.append_to_chroma(\"tfidf\", tfidf_embeddings)\n",
-    "vectorizer.append_to_chroma(\"messages\", sentence_embeddings)"
+    "# vectorizer.append_to_chroma(\"tfidf\", tfidf_embeddings)\n",
+    "# vectorizer.append_to_chroma(\"messages\", sentence_embeddings)"
    ]
   },
   {
@@ -303,6 +292,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_words_for_each_topic = topic_modeller.get_top_words_for_each_topic()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -320,6 +318,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_keywords_for_each_cluster = intent_analyzer.get_top_keywords_for_each_cluster()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -333,6 +340,30 @@
    "outputs": [],
    "source": [
     "message_df.to_csv(\"./data/processed/messages.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Top Word Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(top_words_for_each_topic)):\n",
+    "    print(f\"Topic {i}: {top_words_for_each_topic[i]}\")"
    ]
   }
  ],
