Updated various transformation steps.

--- a/transform.ipynb
+++ b/transform.ipynb
@@ -36,6 +36,9 @@
     "\n",
     "from src.transform.topic_modelling import TopicModellor\n",
     "from src.transform.message_classification import classify_messages\n",
+    "from src.transform.email_summary import summarize_messages\n",
+    "from src.transform.ner import extract_ner\n",
+    "from src.transform.spam_classification import classify_spam_messages\n",
     "from src.database.chroma_manager import ChromaManager\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)"
@@ -92,6 +95,30 @@
    "outputs": [],
    "source": [
     "customer_df = message_df.loc[(message_df[\"is_internal\"] == False) & (message_df[\"from_address\"] != \"info@qib.com.qa\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Spam Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Further filter by removing spam emails."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_df = classify_spam_messages(customer_df)\n",
+    "customer_df = customer_df.loc[customer_df[\"is_spam\"] == False]"
    ]
   },
   {
@@ -338,6 +365,38 @@
    "outputs": [],
    "source": [
     "customer_df = classify_messages(customer_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Named Entity Recognition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_df = extract_ner(customer_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Email Summarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_df = summarize_messages(customer_df)"
    ]
   }
  ],
