--- a/cache_huggingface.ipynb
+++ b/cache_huggingface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,46 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models = [\n",
-    "    # \"lxyuan/distilbert-base-multilingual-cased-sentiments-student\",\n",
-    "    \"meta-llama/Llama-2-7b-chat-hf\",\n",
     "    # \"meta-llama/Meta-Llama-3.1-8B-Instruct\",\n",
-    "    # \"sshleifer/distilbart-cnn-12-6\",\n",
-    "    # \"Helsinki-NLP/opus-mt-ar-en\",\n",
-    "    # \"facebook/bart-large-mnli\"\n",
+    "    \"mrm8488/bert-tiny-finetuned-sms-spam-detection\",\n",
+    "    \"facebook/bart-large-mnli\"\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "976336ce75e1414a848c7236dfa8300c",
+       "model_id": "06e4643e7e8e4121963088a4be042037",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -63,26 +48,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading meta-llama/Llama-2-7b-chat-hf\n"
+      "Downloading mrm8488/bert-tiny-finetuned-sms-spam-detection\n",
+      "Saved to src/models/bert-tiny-finetuned-sms-spam-detection\n",
+      "Downloading facebook/bart-large-mnli\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e2a694d4d264308a38dc0b236003ff0",
+       "model_id": "6f0b4678c5c447c590c78944db863e44",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+       "model.safetensors:  71%|#######1  | 1.16G/1.63G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some non-default generation parameters are set in the model config. These should go into a GenerationConfig file (https://huggingface.co/docs/transformers/generation_strategies#save-a-custom-decoding-strategy-with-your-model) instead. This warning will be raised to an exception in v4.41.\n",
+      "Non-default generation parameters: {'forced_eos_token_id': 2}\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved to src/models/bart-large-mnli\n"
+     ]
     }
    ],
    "source": [
-    "model_dir = \"models\"\n",
+    "model_dir = \"src/models\"\n",
     "for model in tqdm(models):\n",
     "    print(f\"Downloading {model}\")\n",
     "    modelName = model.split(\"/\")[-1]\n",
