Updated transform notebook

--- a/transform.ipynb
+++ b/transform.ipynb
@@ -37,7 +37,7 @@
     "from src.transform.topic_modelling import TopicModellor\n",
     "from src.transform.message_classification import classify_messages\n",
     "from src.transform.email_summary import summarize_messages\n",
-    "from src.transform.ner import extract_ner\n",
+    "from src.transform.ner import extract_entities_from_messages\n",
     "from src.transform.spam_classification import classify_spam_messages\n",
     "from src.database.chroma_manager import ChromaManager\n",
     "\n",
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "customer_df = extract_ner(customer_df)"
+    "customer_df = extract_entities_from_messages(customer_df)"
    ]
   },
   {
