Updated NER method and separated dataframes in preparation for database.

--- a/cache_huggingface.ipynb
+++ b/cache_huggingface.ipynb
@@ -16,22 +16,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49bbc59dc91d4319a1c920750bb3ceb7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "login()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = [\n",
-    "    # \"meta-llama/Meta-Llama-3.1-8B-Instruct\",\n",
-    "    \"mrm8488/bert-tiny-finetuned-sms-spam-detection\",\n",
-    "    \"facebook/bart-large-mnli\"\n",
-    "]"
    ]
   },
   {
@@ -40,14 +42,40 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "models = [\n",
+    "    # \"meta-llama/Meta-Llama-3.1-8B-Instruct\",\n",
+    "    # \"mrm8488/bert-tiny-finetuned-sms-spam-detection\",\n",
+    "    # \"facebook/bart-large-mnli\",\n",
+    "    \"google/gemma-2b\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06e4643e7e8e4121963088a4be042037",
+       "model_id": "26c32cfefc8f4c53bcb6dd85a88b6122",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2 [00:00<?, ?it/s]"
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -57,20 +85,74 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading mrm8488/bert-tiny-finetuned-sms-spam-detection\n",
-      "Saved to src/models/bert-tiny-finetuned-sms-spam-detection\n",
-      "Downloading facebook/bart-large-mnli\n"
+      "Downloading google/gemma-2b\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f0b4678c5c447c590c78944db863e44",
+       "model_id": "2bd389a1fefe49b784ab0fec6d4a01a0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "model.safetensors:  71%|#######1  | 1.16G/1.63G [00:00<?, ?B/s]"
+       "config.json:   0%|          | 0.00/627 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "024d16f6228f470d91593bf4836d4290",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors.index.json:   0%|          | 0.00/13.5k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb9629270a7a430e84755e5fbfded03d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b7a78152e684a86848fd71e9efe24c0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00001-of-00002.safetensors:   0%|          | 0.00/4.95G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8cb76ec93111487d8cb6df348ffa519d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model-00002-of-00002.safetensors:   0%|          | 0.00/67.1M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -80,16 +162,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some non-default generation parameters are set in the model config. These should go into a GenerationConfig file (https://huggingface.co/docs/transformers/generation_strategies#save-a-custom-decoding-strategy-with-your-model) instead. This warning will be raised to an exception in v4.41.\n",
-      "Non-default generation parameters: {'forced_eos_token_id': 2}\n"
+      "`config.hidden_act` is ignored, you should use `config.hidden_activation` instead.\n",
+      "Gemma's activation function will be set to `gelu_pytorch_tanh`. Please, use\n",
+      "`config.hidden_activation` if you want to override this behaviour.\n",
+      "See https://github.com/huggingface/transformers/pull/29402 for more details.\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved to src/models/bart-large-mnli\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cd5544a689744e258f7ecff453b33513",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
